# Async-Task-Management-API-with-Background-Processing

./: .env  .env.docker  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  wait-for-postgres.sh
alembic/: env.py
alembic/versions/: 4a49b89c7a16_initial_migration1.py
app/: background_tasks.py  crud.py  database.py  main.py  models.py  schemas.py
tests/: test_tasks.py
